# Job-Recommendation-System

./: main.py  mcp_server.py  pyproject.toml  requirements.txt
src/: helper.py  job_api.py
